thirteenth projects challenges by frontend mentor

--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Join our community 30-day, hassle-free money back guarantee Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills. Monthly Subscription
-    &dollar;29 per month Full access for less than &dollar;1 a day Sign Up Why Us Tutorials by industry experts Peer &amp; expert code review Coding exercises Access to our GitHub repos Community forum Flashcard decks New videos every week
+    <main class="container">
+      <header>
+        <h1>Join our community</h1>
+        <p>30-day, hassle-free money back guarantee</p>
+        <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+      </header>
+      <section>
+        <div class="price">
+          <h2>Monthly Subscription</h2>
+          <div class="price-list">
+            <p>&dollar;29</p>
+            <p>per month</p>
+          </div>
+          <p>Full access for less than &dollar;1 a day</p>
+          <button>Sign Up</button>
+        </div>
+        <div class="about-us">
+          <h2>Why Us</h2>
+          <p>Tutorials by industry experts Peer &amp; expert code review Coding exercises Access to our GitHub repos Community forum Flashcard decks New videos every week</p>
+        </div>
+      </section>
+    </main>
 
     <!-- <footer>
     <p class="attribution">
